tests/ill-typed/undefined-variable-3.stella
language core;

fn main(n : Nat) -> Nat {
    return main(succ(n));
}